# midas-journal-318

Source/: CMakeLists.txt  itkScalarToFractalImageFilter.h  itkScalarToFractalImageFilterTest.cxx
__MACOSX/Source/: ._itkScalarToFractalImageFilter.h  ._itkScalarToFractalImageFilter.txx  ._itkScalarToFractalImageFilterTest.cxx
